@@ -232,6 +232,7 @@
                         --add-opens com.swardana.nayanika/com.swardana.nayanika.base=ALL-UNNAMED
                         --add-opens com.swardana.nayanika/com.swardana.nayanika.bg=ALL-UNNAMED
                         --add-opens com.swardana.nayanika/com.swardana.nayanika.gui=ALL-UNNAMED
+                        --add-opens com.swardana.nayanika/com.swardana.nayanika.gui.frame=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
